office-kubernetes/kustomize/odoo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo
  labels:
    app: odoo
spec:
  ports:
    - port: 80
      name: http
      targetPort: 8069
      protocol: TCP
  selector:
    app: odoo
