office-kubernetes/kustomize/odoo/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: odoo 
spec:
  parentRefs:
  - name: web
    namespace: gateway-system
  hostnames:
    - "odoo.k8s.local-k8s.tech"
  rules:
    - backendRefs:
      - name: odoo
        port: 80
